--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
             btn.innerHTML = '<span style="position: relative; z-index: 1;">⏳ Creating...</span>';
 
             try {
-                const response = await fetch('https://YOUR-RENDER-URL.onrender.com/api/generate', {
+                const response = await fetch('https://aquaverse-video-generator2.onrender.com/api/generate', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ prompt })
@@ -1093,7 +1093,7 @@
 
         async function loadRecentJobs() {
             try {
-                const response = await fetch('https://YOUR-RENDER-URL.onrender.com/api/jobs');
+                const response = await fetch('https://aquaverse-video-generator2.onrender.com/api/jobs');
                 
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
@@ -1202,6 +1202,7 @@
     </script>
 </body>
 </html>
+
 
 
 
